# mailsift-ultimate

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.production  LICENSE  MailSiftInstaller.iss  MailSift_Ultra.bat  MailSift_Ultra.ps1  MailSift_Ultra.spec  MailSift_Ultra_Portable_Setup.bat  README.md  README_DESKTOP.md  README_ULTRA.md  SMTP_CONFIGURATION_GUIDE.md  ai_intelligence.py  ai_support.py  alembic.ini  api_generator.py  api_v2.py  app.py  app_ultra_simple.py  build_installers.py  celery_app.py  check_linting.py  create_simple_installer.py  crypto_payments.py  desktop_app.py  docker-compose.yml  file_parsing.py  fix_linting.py  gui.py  gui.spec  kubernetes.yaml  mailsift_clean.py  mailsift_final.py  mailsift_perfect.py  mailsift_pro.py  (+20 more)
.github/: PULL_REQUEST_TEMPLATE.md
celery_tasks/: analytics.py  email_processing.py  notifications.py  web_scraping.py
migrations/: env.py
nginx/: mailsift.conf
templates/: admin_panel.html  admin_payments.html  admin_ultra.html  api_docs_ultra.html  api_generator_ultra.html  contact_ultra.html  crypto_payment_ultra.html  dashboard.html  dashboard_final.html  download.html  download_desktop_ultra.html  download_ultra.html  index.html  index_clean.html  index_final.html  index_perfect.html  index_pro.html  index_ultimate.html  index_ultra.html  index_v2.html  paywall.html  pricing.html  pricing_final.html  pricing_ultimate.html  pricing_ultra.html  support_ultra.html
tests/: test_app_routes.py  test_extraction.py  test_file_parsing.py  test_payments.py  test_public_api.py  (+4 more)
(+6 files in other folders)
